[workspace]
members = [
    'runtime/moonbase',
    'runtime/moonbeam',
    'runtime/moonriver',
]

[profile.release]
panic = 'unwind'

[patch.crates-io]
evm = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.16"}
evm-runtime = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.16" }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.16" }
ethereum = { git = "https://github.com/purestake/ethereum", branch = "tgm-0.11.1-typeinfo-patch" }

# Overrides to set Frontier version for code shared across runtime versions.
[patch."https://github.com/nanocryk/frontier"]
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }

# Overrides to set Substrate version for code shared across runtime versions.
[patch."https://github.com/nanocryk/substrate-1"]
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
