[workspace]
members = [
    'runtime/moonbase',
    'runtime/moonbeam',
    'runtime/moonriver',
]

[profile.release]
panic = 'unwind'

# Overrides to set Frontier version for code shared across runtime versions.
[patch."https://github.com/nanocryk/frontier"]
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.20" }

# Overrides to set Substrate version for code shared across runtime versions.
[patch."https://github.com/nanocryk/substrate-1"]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
